--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --color-bg-dark: #f5f5f5;
+  --color-text: #22243b;
+  --color-scrollbar: #aaa7a7;
+}
+
+html.dark {
+  --color-bg-dark: #1a1c35;
+  --color-text: #fdfffd;
+}
+
+#root {
+  width: 100%;
+  height: 60%;
+  background-color: var(--color-bg-dark);
+  color: var(--color-text);
+}
+
+/* -----header----- */
+.logo {
+  /* color: red; */
+}
+.logo_title {
+  font-family: Anton;
+}
