--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,3 +63,12 @@ html.dark {
 .tasklist {
   overflow: auto;
 }
+
+/* -----TaskGroup----- */
+.taskgroup {
+}
+
+/* -----TaskCards----- */
+.taskcards {
+  overflow: auto;
+}
