--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@ html.dark {
 
 #root {
   width: 100%;
-  height: 60%;
+  height: 100%;
   background-color: var(--color-bg-dark);
   color: var(--color-text);
 }
@@ -77,4 +77,8 @@ html.dark {
 /* -----TaskCard----- */
 .taskcard:hover {
   cursor: pointer;
+}
+
+/* -----TaskPagination----- */
+.page_number {
 }
