--- a/client/src/index.css
+++ b/client/src/index.css
@@ -85,6 +85,7 @@ html.dark {
 
 /* -----TaskPagination----- */
 .page_number {
+  cursor: pointer;
 }
 .page_number.selected {
   background-color: var(--color-page-bg);
