--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,7 +66,7 @@ html.dark {
 
 /* -----Tasklist----- */
 .tasklist {
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 /* -----TaskGroup----- */
@@ -90,4 +90,9 @@ html.dark {
 .page_number.selected {
   background-color: var(--color-page-bg);
   color: var(--color-page-text);
+}
+
+/* ----UserList---- */
+.userlist {
+  overflow: auto;
 }
