--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
 :root {
   --color-bg-dark: #f5f5f5;
   --color-text: #22243b;
+  --color-btn-text: #22243b;
   --color-scrollbar: #aaa7a7;
   --color-page-bg: #1a1c35;
   --color-page-text: #f5f5f5;
@@ -17,6 +18,7 @@
 html.dark {
   --color-bg-dark: #1a1c35;
   --color-text: #fdfffd;
+  --color-btn-text: #22243b;
   --color-page-bg: #f5f5f5;
   --color-page-text: #1a1c35;
 }
@@ -109,4 +111,11 @@ html.dark {
 /* -----Projects cards----- */
 .home_card_section {
   /* height: 55rem; */
+}
+
+.delete_btn,
+.detail_btn,
+.join_btn,
+.done_btn {
+  color: var(--color-btn-text);
 }
